FIXED
Fixed the persistant bug in mobile that made the nav bar too big

--- a/public/style.css
+++ b/public/style.css
@@ -57,7 +57,6 @@ div {
   height: 100vh;
   position: fixed;
   width: 100vw;
-  padding-top: 65px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -75,7 +74,7 @@ div {
   width: 100%;
   background-color: #272626;
   position: relative;
-  margin-top: calc(100vh + 65px);
+  margin-top: 100vh;
 }
 
 .about {
@@ -115,7 +114,7 @@ div {
 }
 
 .certifications-content {
-  padding: 100px;
+  
 }
 
 .projects {
@@ -125,7 +124,7 @@ div {
 }
 
 .projects-content {
-  padding: 100px;
+ 
 }
 
 .contact {
@@ -135,7 +134,7 @@ div {
 }
 
 .contact-content {
-  padding: 100px;
+  
 }
 
 #name-typewriter {
@@ -288,9 +287,12 @@ progress::-moz-progress-bar {
   }
 
   .skills-list {
-    font-size: 30px;
+    font-size: 10px;
     flex-wrap: nowrap;
-    justify-content: start;
+    justify-content: space-between;
+  }
+  ul {
+    padding-left: 0px;
   }
 }
 
